--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,8 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css">
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Comfortaa|Open+Sans&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/539914c5fa.js"></script>
     
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
